[winter]-별똥별 배경컴포넌트 추가 및 적용, 기타 코드 수정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[공짜로!]몰아보기의밤</title>
+    <title>[공짜로!]몰아보기의 밤, 몰밤</title>
   </head>
   <body>
     <div id="root"></div>
